levels in singleton